--- a/ArtSpace/app/src/main/res/values/strings.xml
+++ b/ArtSpace/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ArtSpace</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="art_piece_content_description">Artwork: %s</string>
 </resources>
